--- a/templates/attendance2/delete_menu.html
+++ b/templates/attendance2/delete_menu.html
@@ -13,37 +13,24 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="../attendance2">TOPページ <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                シフトデータ
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href='../attendance2/list'>全体のシフトデータ</a>
-                                {% if request.user.authority == '管理者' %}
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="../attendance2/user_search">スタッフ別個人シフトデータ</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="../attendance2/mylist">自分のシフトデータ</a>
-                                {% endif %}
-                            </div>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="../attendance2/mylist">シフトデータ</a> <span class="sr-only">(current)</span></a>
                         </li>
                         
 
-                        {% if request.user.authority == '管理者' %}
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    シフト追加
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href='../attendance2/add_shift'>一件追加</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="../attendance2/add_manyshift">複数件追加</a>
-                                </div>
-                            </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="../attendance2/delete_menu">シフト削除</a> <span class="sr-only">(current)</span></a>
-                            </li>
-                        {% endif %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                シフト追加
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href='../attendance2/add_shift'>一件追加</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="../attendance2/add_manyshift">複数件追加</a>
+                            </div>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="../attendance2/delete_menu">シフト削除</a> <span class="sr-only">(current)</span></a>
+                        </li>
                     </ul>
                     <ul style="list-style: none;">
                         <li class="nav-item dropdown">
@@ -51,14 +38,15 @@
                                 {{request.user}}
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href='mylist'>個人シフトデータ</a>
+                                <a class="dropdown-item" href='mylist'>シフトデータ</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="../myapp">ログアウト</a>
+                                <a class="dropdown-item" href="{% url 'logout' %}">ログアウト</a>
                             </div>
                         </li>
                     </ul>
                 </div>
         </nav>
+        
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -83,66 +71,62 @@
 <html>
     <div class="w-auto p-2" style="background-color: #eee;">
         <div class="container">
-            <nav aria-label="パンくずリスト">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="../attendance2"><h6>TOPページ</h6></a></li>
-                    <li class="breadcrumb-item active" aria-current="page"><h6>データ削除</h6></li>
-                </ol>
-            </nav>
             <h4>データ削除</h4>
         </div>
     </div>
     <div class="py-3">
         <div class="container">
-        {% if data_flag　==　True%}
-            <p>削除したいデータを選択して削除してください。</p>
-        {% else %}
-            <p>データがないので削除出来ません。</p>
-        {% endif %}
-        <p>{{message2}}</p>
-        <p>データ一覧</p>
-        <div class="table-responsive">
-        <form method="post" action="{% url 'delete' %}">{# actionを変更する #}
-            <table class ='table table-striped' >
-            <tr>
-                <th> </th>
-                <th>スタッフ名</th>
-                <th>出勤予定時刻</th>
-                <th>退勤予定時刻</th>
-                <th>出勤時刻</th>
-                <th>退勤時刻</th>
-                <th>労働時間</th>
-                <th>遅刻</th>
-                <th>早退</th>
-                <th>欠勤</th>
-                <th>備考欄</th>
-            
-            </tr>
-            {% for member in data %}
-            <tr>
-            <td><input type="checkbox" name="delete" value="{{ member.id }}"></td>{# 追加する #}
-                <td>{{ member.user}}</td>
-                <td>{{ member.scheduled_attend_time}}</td>
-                <td>{{ member.scheduled_leave_time}}</td>
-                <td>{{ member.attend_time }}</td>
-                <td>{{ member.leave_time}}</td>
-                <td>{{ member.work_time}}</td>
-                <td>{{ member.is_late}}</td>
-                <td>{{ member.is_early}}</td>
-                <td>{{ member.is_absence}}</td>
-                <td>{{ member.remarks }}</td>
-            </tr>
-            {% endfor %}
-        </table>
-        </div>
-        <p />
-        {% csrf_token %}{##}
-        {% if data_flag　==　True %}
-            <input type="submit" value="削除" class='btn btn-danger'>
-        {% endif %}
-        </form>
-        <!--<p>{{ message }}</p>-->
-        <p />
+            {% if user.is_authenticated %}
+                {% if data_flag　==　True%}
+                    <p>削除したいデータを選択して削除してください。</p>
+                {% else %}
+                    <p>データがないので削除出来ません。</p>
+                {% endif %}
+                <p>{{message2}}</p>
+                <p>データ一覧</p>
+                <div class="table-responsive">
+                <form method="post" action="{% url 'delete' %}">{# actionを変更する #}
+                    <table class ='table table-striped' >
+                    <tr>
+                        <th> </th>
+                        <th>出勤予定時刻</th>
+                        <th>退勤予定時刻</th>
+                        <th>出勤時刻</th>
+                        <th>退勤時刻</th>
+                        <th>労働時間</th>
+                        <th>遅刻</th>
+                        <th>早退</th>
+                        <th>欠勤</th>
+                        <th>備考欄</th>
+                    
+                    </tr>
+                    {% for member in data %}
+                    <tr>
+                    <td><input type="checkbox" name="delete" value="{{ member.id }}"></td>{# 追加する #}
+                        <td>{{ member.scheduled_attend_time}}</td>
+                        <td>{{ member.scheduled_leave_time}}</td>
+                        <td>{{ member.attend_time }}</td>
+                        <td>{{ member.leave_time}}</td>
+                        <td>{{ member.work_time}}</td>
+                        <td>{{ member.is_late}}</td>
+                        <td>{{ member.is_early}}</td>
+                        <td>{{ member.is_absence}}</td>
+                        <td>{{ member.remarks }}</td>
+                    </tr>
+                    {% endfor %}
+                </table>
+                </div>
+                <p />
+                {% csrf_token %}{##}
+                {% if data_flag　==　True %}
+                    <input type="submit" value="削除" class='btn btn-danger'>
+                {% endif %}
+                </form>
+            <!--<p>{{ message }}</p>-->
+            <p />
+            {% else %}
+                <p><a href="{% url 'login' %}" class="btn btn-info">ログイン</a></p>
+            {% endif %}
         </div>
     </div>
 
