--- a/templates/attendance2/home.html
+++ b/templates/attendance2/home.html
@@ -13,37 +13,24 @@
                             <li class="nav-item active">
                                 <a class="nav-link" href="../attendance2">TOPページ <span class="sr-only">(current)</span></a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    シフトデータ
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href='../attendance2/list'>全体のシフトデータ</a>
-                                    {% if request.user.authority == '管理者' %}
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="../attendance2/user_search">スタッフ別個人シフトデータ</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="../attendance2/mylist">自分のシフトデータ</a>
-                                    {% endif %}
-                                </div>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="../attendance2/mylist">シフトデータ</a> <span class="sr-only">(current)</span></a>
                             </li>
                             
     
-                            {% if request.user.authority == '管理者' %}
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        シフト追加
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href='../attendance2/add_shift'>一件追加</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="../attendance2/add_manyshift">複数件追加</a>
-                                    </div>
-                                </li>
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="../attendance2/delete_menu">シフト削除</a> <span class="sr-only">(current)</span></a>
-                                </li>
-                            {% endif %}
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    シフト追加
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href='../attendance2/add_shift'>一件追加</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="../attendance2/add_manyshift">複数件追加</a>
+                                </div>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="../attendance2/delete_menu">シフト削除</a> <span class="sr-only">(current)</span></a>
+                            </li>
                         </ul>
                         <ul style="list-style: none;">
                             <li class="nav-item dropdown">
@@ -51,7 +38,7 @@
                                     {{request.user}}
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href='mylist'>個人シフトデータ</a>
+                                    <a class="dropdown-item" href='mylist'>シフトデータ</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="{% url 'logout' %}">ログアウト</a>
                                 </div>
@@ -87,14 +74,7 @@
 <!--{% block header %}-->
     <div class="w-auto p-2" style="background-color: #eee;">
         <div class="container">
-            <nav aria-label="パンくずリスト">
-                <div class="breadcrumb">
-                    <li class="breadcrumb-item active" aria-current="page">
-                        <h6>TOPページ</h6>
-                    </li>
-                </div>
                 <h4>TOPページ</h4>
-            </nav>
             <!--<h5 class='display-5'>TOPページ</h5>-->
         </div>
 </div>
@@ -105,15 +85,6 @@
         <div class="container">
             {% if user.is_authenticated %}
                 <p>お疲れ様です。{{ message }}さん！！<p />
-                {% if request.user.authority == '管理者'%}
-                    これは管理者アカウントです。
-                {% elif request.user.authority == '一般人' %}
-                    これは一般ユーザーアカウントです。
-                {% else %}
-                    このアカウントはログインしていません。
-
-                {% endif %}
-                <p />
                 {% if data_flag and attend_flag == False and leave_flag ==　False　%}
                     次のシフトは
                     {{data.scheduled_attend_time}}から
@@ -132,7 +103,7 @@
                 {% elif leave_flag == True %}
                     退勤できます。退勤ボタンを押してください。<p />
                 {% endif %}
-                {% if data_flag == False and request.user.authority == '管理者'%}
+                {% if data_flag == False%}
                     <a href='shift_addition_menu' class='btn btn-info'>シフト追加</a><p />
                     
                 {% endif %}
