--- a/templates/attendance2/mylist.html
+++ b/templates/attendance2/mylist.html
@@ -13,37 +13,24 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="../attendance2">TOPページ <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                シフトデータ
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href='../attendance2/list'>全体のシフトデータ</a>
-                                {% if request.user.authority == '管理者' %}
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="../attendance2/user_search">スタッフ別個人シフトデータ</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="../attendance2/mylist">自分のシフトデータ</a>
-                                {% endif %}
-                            </div>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="../attendance2/mylist">シフトデータ</a> <span class="sr-only">(current)</span></a>
                         </li>
                         
 
-                        {% if request.user.authority == '管理者' %}
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    シフト追加
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href='../attendance2/add_shift'>一件追加</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="../attendance2/add_manyshift">複数件追加</a>
-                                </div>
-                            </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="../attendance2/delete_menu">シフト削除</a> <span class="sr-only">(current)</span></a>
-                            </li>
-                        {% endif %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                シフト追加
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href='../attendance2/add_shift'>一件追加</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="../attendance2/add_manyshift">複数件追加</a>
+                            </div>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="../attendance2/delete_menu">シフト削除</a> <span class="sr-only">(current)</span></a>
+                        </li>
                     </ul>
                     <ul style="list-style: none;">
                         <li class="nav-item dropdown">
@@ -66,7 +53,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-        <title>{{user}}のシフトデータ - 勤怠管理OSUMI</title>
+        <title>{{user}}のシフトデータ {{title}} - 勤怠管理OSUMI</title>
     </head>
     <body>
         <!--<h1>Hello, world!</h1>-->
@@ -83,22 +70,32 @@
 <html>
     <div class="w-auto p-2" style="background-color: #eee;">
         <div class="container">
-        <nav aria-label="パンくずリスト">
-            <ol class="breadcrumb mb-1">
-              <li class="breadcrumb-item"><a href="../attendance2/"><h6>TOPページ</h6></a></li>
-              <li class="breadcrumb-item"><a href="../attendance2/list"><h6>全体のシフトデータ</h6></a></li>
-              <li class="breadcrumb-item active" aria-current="page"><h6>{{user}}のシフトデータ</h6></li>
-            </ol>
-          </nav>
-        <h4>{{user}}のシフトデータ</h4>
+        
+        <h4>{{user}}のシフトデータ {{title}}</h4>
     </div>
     </div>
 
     <div class="py-3">
         <div class="container">
+            {% if time_series_flag == False %}
+                <p>時系列がおかしいので登録不可です。</p>
+            {% endif %}
+            {% if time_over_flag == False %}
+                <p>労働予定時間が長すぎるので登録不可です。</p>
+            {% endif %}
+            {% if data_alignment_flag == False %}
+                <p>シフトがかぶっているので登録不可です。</p>
+                <p>一時間空けてシフトを登録するようお願いします。</p>
+            {% endif %}
+            {% if sort_flag == True %}
+                </a><a href='../attendance2/mylist' class='btn btn-primary'>登録順</a><p />
+            {% else %}
+                </a><a href='../attendance2/sortlist' class='btn btn-primary'>時系列順</a><p />
+            {% endif %}
             <p>{{ message }}</p>
             <div class="table-responsive">
             <table class ='table table-striped' >
+        
                 <tr>
                     <th>出勤予定時刻</th>
                     <th>退勤予定時刻</th>
