--- a/templates/attendance2/shift_addition_menu.html
+++ b/templates/attendance2/shift_addition_menu.html
@@ -13,37 +13,24 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="../attendance2">TOPページ <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                シフトデータ
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href='../attendance2/list'>全体のシフトデータ</a>
-                                {% if request.user.authority == '管理者' %}
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="../attendance2/user_search">スタッフ別個人シフトデータ</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="../attendance2/mylist">自分のシフトデータ</a>
-                                {% endif %}
-                            </div>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="../attendance2/mylist">シフトデータ</a> <span class="sr-only">(current)</span></a>
                         </li>
                         
 
-                        {% if request.user.authority == '管理者' %}
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    シフト追加
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href='../attendance2/add_shift'>一件追加</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="../attendance2/add_manyshift">複数件追加</a>
-                                </div>
-                            </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="../attendance2/delete_menu">シフト削除</a> <span class="sr-only">(current)</span></a>
-                            </li>
-                        {% endif %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                シフト追加
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href='../attendance2/add_shift'>一件追加</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="../attendance2/add_manyshift">複数件追加</a>
+                            </div>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="../attendance2/delete_menu">シフト削除</a> <span class="sr-only">(current)</span></a>
+                        </li>
                     </ul>
                     <ul style="list-style: none;">
                         <li class="nav-item dropdown">
@@ -51,9 +38,9 @@
                                 {{request.user}}
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href='mylist'>個人シフトデータ</a>
+                                <a class="dropdown-item" href='mylist'>シフトデータ</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="../myapp">ログアウト</a>
+                                <a class="dropdown-item" href="{% url 'logout' %}">ログアウト</a>
                             </div>
                         </li>
                     </ul>
@@ -84,12 +71,7 @@
 <html>
     <div class="w-auto p-2" style="background-color: #eee;">
         <div class="container">
-            <nav aria-label="パンくずリスト">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="../attendance2"><h6>TOPページ</h6></a></li>
-                    <li class="breadcrumb-item active" aria-current="page"><h6>シフト追加メニュー</h6></li>
-                </ol>
-            </nav>
+            
             <h4>シフト追加メニュー</h4>
         </div>
     </div>
